test/std/negative/division_by_zero.ls
// Test: Division by Zero
// Layer: 2 | Category: negative | Covers: div/mod by zero, error propagation

10 / 0
-5 / 0
0 / 0
let zero_divisor = 0
10 % zero_divisor
10.0 / 0.0
-5.0 / 0.0
0.0 / 0.0
